Primer Commit con Estilos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkSpace Git</title>
+    <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
-    <h1>WorkSpace Git</h1>
-    <p>Front por defecto de documento html</p>
+    <div id="container">
+        <div id="post">
+            <h1>WorkSpace Git</h1>
+            <p>Front por defecto de documento html</p>
+            <p>Modificacion 2</p>
+            <p>modificacion 3</p>
+        </div>
+    </div>
 </body>
 </html>
