Estructura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>WorkSpace Git</h1>
             <p>Front por defecto de documento html</p>
