Agregado contenido adicional del blog

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <div id="post">
             <h1>WorkSpace Git</h1>
             <p>Front por defecto de documento html</p>
-            <p>Modificacion 2</p>
-            <p>modificacion 3</p>
+            <p>Segundo parrafo de inicio que reemplaza lo
+                mostrado en curso de Git
+            </p>
         </div>
     </div>
 </body>
